# httplib

./: .gitignore  meson.build  readme.md
httpclient/: main.cpp  meson.build
httplib/: meson.build
httplib/include/: meson.build
httplib/include/httplib/: utils.h
httplib/include/internal/: pch.h  stddefs.h
httplib/sources/: meson.build  utils.cpp
httplib/tests/: is_http_url.cpp  meson.build
scripts/: build.py  internal_config.py  setup.py
